# edway2

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
reference/: Makefile  edway.h  main.c  players.c  protos.h  reformat.c  session.c  showhelp.c  support.c
reference/doc/: README  complexity.html  manual.html
reference/doc/HELP/: c-b  c-bang  c-bpf  c-cap  c-cs  c-d  c-db  c-e  c-ek  c-eq  c-f  c-fi  c-fo  c-ft  c-g  c-gen  c-h  c-hg  c-hpf  c-j  c-k  c-l  c-lpf  c-m  c-ms  c-mx  c-nb  c-nc  c-oq  c-p  c-pub  c-q  c-qm  c-qmqm  c-r  c-rb  c-sl  c-slash  c-sm  c-sq  (+27 more)
reports/: prop-editing.md  prop-invariants.md  prop-serialization.md
src/edway2/: __init__.py  __main__.py  audio.py  blocks.py  cli.py  errors.py  parser.py  project.py  repl.py  session.py
src/edway2/commands/: __init__.py  editing.py  export.py  files.py  info.py  marks.py  misc.py  playback.py  tracks.py  undo.py
tests/: conftest.py  conftest_hypothesis.py  test_blocks.py  test_cli.py  test_commands_editing.py  test_commands_export.py  test_commands_files.py  test_commands_marks.py  test_commands_misc.py  test_commands_playback.py  test_commands_tracks.py  test_git_undo.py  test_parser.py  test_project.py  test_properties.py  test_repl.py  test_session.py
