[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edway2"
version = "0.1.0"
description = "Non-destructive multitrack audio editor with line-editor UX"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "David" }
]
keywords = ["audio", "editor", "multitrack", "non-destructive", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = [
    "pedalboard>=0.9.0",
    "soundfile>=0.12.0",
    "sounddevice>=0.4.0",
    "opentimelineio>=0.15.0",
    "prompt-toolkit>=3.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
edway2 = "edway2.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/edway2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
